--- a/exelente_ru/school-page.html
+++ b/exelente_ru/school-page.html
@@ -197,7 +197,8 @@
                 <li class="programs__sublist-item">Лингвистика</li>
                 <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
                 <li class="programs__sublist-item">Науки о материалах</li>
-              </ul><a class="programs__submit" href="#">В КАТАЛОГ</a>
+              </ul>
+              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
             </div>
             <div class="programs__info-item programs__info-item_2">
               <p class="programs__text">Россия была провозглашена республикой 1 сентября 1917 года, хотя фактически стала ею 3 марта 1917 года в результате Февральской революции. С 10 января 1918 года — РСФСР. 30 декабря 1922 года РСФСР вместе с другими советскими республиками учредила СССР, неофициально его тоже часто называли «Россией».До V века славяне жили при родовом строе. Во главе каждой родовой общины стоял родовой старейшина, обладающий неограниченной властью. Земля являлась собственностью общины, часть сельскохозяйственных р</p>
@@ -209,7 +210,8 @@
                 <li class="programs__sublist-item">Лингвистика</li>
                 <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
                 <li class="programs__sublist-item">Науки о материалах</li>
-              </ul><a class="programs__submit" href="#">В КАТАЛОГ</a>
+              </ul>
+              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
             </div>
             <div class="programs__info-item programs__info-item_3">
               <p class="programs__text">В вузах Кипра представлен широкий выбор специальностей на английском языке: от гуманитарных наук до гостиничного бизнеса. Здесь можно пройти подготовку по программам бакалавриата, магистратуры и докторантуры. На базе многих университетов работают центры трудоустройства и карьеры. Для поступления в университет на Кипре необходимо предоставить результаты международного экзамена TOEFL или IELTS. Если уровень английского языка недостаточно высок, можно пройти подготовительные курсы при университете.</p>
@@ -221,7 +223,8 @@
                 <li class="programs__sublist-item">Лингвистика</li>
                 <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
                 <li class="programs__sublist-item">Науки о материалах</li>
-              </ul><a class="programs__submit" href="#">В КАТАЛОГ</a>
+              </ul>
+              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
             </div>
             <div class="programs__info-item programs__info-item_4">
               <p class="programs__text">В вузах Кипра представлен широкий выбор специальностей на английском языке: от гуманитарных наук до гостиничного бизнеса. Здесь можно пройти подготовку по программам бакалавриата, магистратуры и докторантуры. На базе многих университетов работают центры трудоустройства и карьеры. Для поступления в университет на Кипре необходимо предоставить результаты международного экзамена TOEFL или IELTS. Если уровень английского языка недостаточно высок, можно пройти подготовительные курсы при университете.</p>
@@ -233,7 +236,8 @@
                 <li class="programs__sublist-item">Лингвистика</li>
                 <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
                 <li class="programs__sublist-item">Науки о материалах</li>
-              </ul><a class="programs__submit" href="#">В КАТАЛОГ</a>
+              </ul>
+              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
             </div>
             <div class="programs__info-item programs__info-item_5">
               <p class="programs__text">В вузах Кипра представлен широкий выбор специальностей на английском языке: от гуманитарных наук до гостиничного бизнеса. Здесь можно пройти подготовку по программам бакалавриата, магистратуры и докторантуры. На базе многих университетов работают центры трудоустройства и карьеры. Для поступления в университет на Кипре необходимо предоставить результаты международного экзамена TOEFL или IELTS. Если уровень английского языка недостаточно высок, можно пройти подготовительные курсы при университете.</p>
@@ -245,7 +249,8 @@
                 <li class="programs__sublist-item">Лингвистика</li>
                 <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
                 <li class="programs__sublist-item">Науки о материалах</li>
-              </ul><a class="programs__submit" href="#">В КАТАЛОГ</a>
+              </ul>
+              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
             </div>
             <div class="programs__info-item programs__info-item_6">
               <p class="programs__text">В вузах Кипра представлен широкий выбор специальностей на английском языке: от гуманитарных наук до гостиничного бизнеса. Здесь можно пройти подготовку по программам бакалавриата, магистратуры и докторантуры. На базе многих университетов работают центры трудоустройства и карьеры. Для поступления в университет на Кипре необходимо предоставить результаты международного экзамена TOEFL или IELTS. Если уровень английского языка недостаточно высок, можно пройти подготовительные курсы при университете.</p>
@@ -257,7 +262,8 @@
                 <li class="programs__sublist-item">Лингвистика</li>
                 <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
                 <li class="programs__sublist-item">Науки о материалах</li>
-              </ul><a class="programs__submit" href="#">В КАТАЛОГ</a>
+              </ul>
+              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
             </div>
           </div>
         </div>
