--- a/exelente_ru/school-page.html
+++ b/exelente_ru/school-page.html
@@ -161,6 +161,7 @@
             <ul class="site-path__items">
               <li class="site-path__item"><a href="#">Главная</a></li>
               <li class="site-path__item"><a href="#">Школы</a></li>
+              <li class="site-path__item"><a href="#">St. John's University</a></li>
             </ul>
           </div>
           <h2 class="images__title slide__title">St. John's University</h2>
