--- a/exelente_ru/schools.html
+++ b/exelente_ru/schools.html
@@ -43,7 +43,7 @@
               <section class="login">
                 <h2 class="login-content__title">Вход</h2><a class="login-content__close" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
                 <div class="row form">
-                  <form class="login-content-form" action="#" metod="get">
+                  <form class="login-content-form" action="#" method="get">
                     <p class="login-content-form__mail-title">Эл. почта</p>
                     <input class="login-content-form__mail-input" type="text" name="mail" placeholder="user@example.com" required="required" autocomplete="off"/>
                     <label class="login-content-form__mail-input--error" for="mail">Поле заполненно с ошибкой</label>
@@ -638,8 +638,8 @@
           </div>
           <div class="row row3">
             <ul class="chosen-content-ulist">
-              <li class="chosen-content-ulist-list"><a class="chosen-content-ulist-list__sign" href="#">зарегистрироваться</a></li>
-              <li class="chosen-content-ulist-list"><a class="chosen-content-ulist-list__login" href="#">войти в аккаунт</a></li>
+              <li class="chosen-content-ulist-list"><a class="chosen-content-ulist-list__sign" href="login.html">зарегистрироваться</a></li>
+              <li class="chosen-content-ulist-list"><a class="chosen-content-ulist-list__login" href="login.html">войти в аккаунт</a></li>
             </ul>
           </div>
         </section>
