--- a/exelente_ru/login.html
+++ b/exelente_ru/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>St. John's University</title>
+    <title>Вход/Регистрация</title>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/header.css"/>
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/footer.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script href="js/prefixfree.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="css/school-page.css"/>
+    <link rel="stylesheet" href="css/content_login.css"/>
   </head>
   <body>
     <div class="container">
@@ -186,120 +186,62 @@
           </div>
         </div>
       </header>
-      <section class="images">
-        <div class="wrapper images__wrapper">
-          <div class="images__site-path site-path"> 
-            <ul class="site-path__items">
-              <li class="site-path__item"><a href="index.html">Главная</a></li>
-              <li class="site-path__item"><a href="schools.html">Школы</a></li>
-              <li class="site-path__item"><a href="school-page.html">St. John's University</a></li>
-            </ul>
-          </div>
-          <h2 class="images__title slide__title">St. John's University</h2>
-        </div>
-      </section>
-      <section class="information">
-        <div class="wrapper information__wrapper">
-          <h2 class="information__title information__title_about-school h2-title">о школе</h2>
-          <p class="information__text information__text_about-school">Как университет, мы привержены академическому совершенству и стремлению к мудрости, которая вытекает из свободного расследования, религиозных ценностей и человеческого опыта. Мы стремимся сохранить и укрепить атмосферу, в которой научные исследования, изобретательная методология, глобальная осведомленность и восторженные поиски истины служат основой жизненно важного процесса обучения и развития непрерывного обучения. Наша основная учебная программа по гуманитарным наукам и наукам направлена ​​на обогащение жизни, а также профессий и служит для унификации студенческого опыта.</p>
-          <h2 class="information__title information__title_school-advantages h2-title">преимущества </h2>
-          <p class="information__text information__text_school-advantages">Обучение в университетах Кипра ведется по программам, признанным на международном уровне, поэтому здесь дают качественные знания для овладения востребованной специальностью. Кипр является крупным финансовым и туристическим центром, что дает большие возможности для прохождения стажировок и удачного трудоустройства.</p>
-          <p class="information__text information__text_school-advantages">Уехать учиться на Кипр стоит и по той причине, что по местным законам после окончания учебы иностранец может остаться в стране на 1 год для поиска работы. А студенческая виза позволяет совмещать учебу на Кипре с работой.</p>
-        </div>
-      </section>
-      <section class="programs">
-        <div class="wrapper programs__wrapper">
-          <h2 class="programs__title h2-title">Программы</h2>
-          <ul class="programs__list">
-            <li class="programs__list-item programs__list-item_1 programs__list-item_active">IELTS</li>
-            <li class="programs__list-item programs__list-item_2">TOEFL</li>
-            <li class="programs__list-item programs__list-item_3">CAMBRIDGE</li>
-            <li class="programs__list-item programs__list-item_4">PEARSON</li>
-            <li class="programs__list-item programs__list-item_5">PATHWAY</li>
-            <li class="programs__list-item programs__list-item_6">ВНУТРЕННИЙ ТЕСТ ШКОЛЫ</li>
+      <div class="wrapper">
+        <div class="content-login">
+          <ul class="content-login-items">
+            <li class="content-login-items__item"><a class="content-login-items__item-link" href="index.html">главная</a></li>
+            <li class="content-login-items__item"><a class="content-login-items__item-link" href="#">вход/регистрация</a></li>
           </ul>
-          <div class="programs__info">
-            <div class="programs__info-item programs__info-item_1 programs__info-item_active">
-              <p class="programs__text">В вузах Кипра представлен широкий выбор специальностей на английском языке: от гуманитарных наук до гостиничного бизнеса. Здесь можно пройти подготовку по программам бакалавриата, магистратуры и докторантуры. На базе многих университетов работают центры трудоустройства и карьеры. Для поступления в университет на Кипре необходимо предоставить результаты международного экзамена TOEFL или IELTS. Если уровень английского языка недостаточно высок, можно пройти подготовительные курсы при университете.</p>
-              <h3 class="programs__subtitle">Специальности (IELTS)</h3>
-              <ul class="programs__sublist">
-                <li class="programs__sublist-item">Биологические науки</li>
-                <li class="programs__sublist-item">Инженерные науки</li>
-                <li class="programs__sublist-item">Искусствоведение</li>
-                <li class="programs__sublist-item">Лингвистика</li>
-                <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
-                <li class="programs__sublist-item">Науки о материалах</li>
-              </ul>
-              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
-            </div>
-            <div class="programs__info-item programs__info-item_2">
-              <p class="programs__text">Россия была провозглашена республикой 1 сентября 1917 года, хотя фактически стала ею 3 марта 1917 года в результате Февральской революции. С 10 января 1918 года — РСФСР. 30 декабря 1922 года РСФСР вместе с другими советскими республиками учредила СССР, неофициально его тоже часто называли «Россией».До V века славяне жили при родовом строе. Во главе каждой родовой общины стоял родовой старейшина, обладающий неограниченной властью. Земля являлась собственностью общины, часть сельскохозяйственных р</p>
-              <h3 class="programs__subtitle">Специальности (TOEFL)</h3>
-              <ul class="programs__sublist">
-                <li class="programs__sublist-item">Биологические науки</li>
-                <li class="programs__sublist-item">Инженерные науки</li>
-                <li class="programs__sublist-item">Искусствоведение</li>
-                <li class="programs__sublist-item">Лингвистика</li>
-                <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
-                <li class="programs__sublist-item">Науки о материалах</li>
-              </ul>
-              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
-            </div>
-            <div class="programs__info-item programs__info-item_3">
-              <p class="programs__text">В вузах Кипра представлен широкий выбор специальностей на английском языке: от гуманитарных наук до гостиничного бизнеса. Здесь можно пройти подготовку по программам бакалавриата, магистратуры и докторантуры. На базе многих университетов работают центры трудоустройства и карьеры. Для поступления в университет на Кипре необходимо предоставить результаты международного экзамена TOEFL или IELTS. Если уровень английского языка недостаточно высок, можно пройти подготовительные курсы при университете.</p>
-              <h3 class="programs__subtitle">Специальности (cambridge)</h3>
-              <ul class="programs__sublist">
-                <li class="programs__sublist-item">Биологические науки</li>
-                <li class="programs__sublist-item">Инженерные науки</li>
-                <li class="programs__sublist-item">Искусствоведение</li>
-                <li class="programs__sublist-item">Лингвистика</li>
-                <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
-                <li class="programs__sublist-item">Науки о материалах</li>
-              </ul>
-              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
-            </div>
-            <div class="programs__info-item programs__info-item_4">
-              <p class="programs__text">В вузах Кипра представлен широкий выбор специальностей на английском языке: от гуманитарных наук до гостиничного бизнеса. Здесь можно пройти подготовку по программам бакалавриата, магистратуры и докторантуры. На базе многих университетов работают центры трудоустройства и карьеры. Для поступления в университет на Кипре необходимо предоставить результаты международного экзамена TOEFL или IELTS. Если уровень английского языка недостаточно высок, можно пройти подготовительные курсы при университете.</p>
-              <h3 class="programs__subtitle">Специальности (pearson)</h3>
-              <ul class="programs__sublist">
-                <li class="programs__sublist-item">Биологические науки</li>
-                <li class="programs__sublist-item">Инженерные науки</li>
-                <li class="programs__sublist-item">Искусствоведение</li>
-                <li class="programs__sublist-item">Лингвистика</li>
-                <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
-                <li class="programs__sublist-item">Науки о материалах</li>
-              </ul>
-              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
-            </div>
-            <div class="programs__info-item programs__info-item_5">
-              <p class="programs__text">В вузах Кипра представлен широкий выбор специальностей на английском языке: от гуманитарных наук до гостиничного бизнеса. Здесь можно пройти подготовку по программам бакалавриата, магистратуры и докторантуры. На базе многих университетов работают центры трудоустройства и карьеры. Для поступления в университет на Кипре необходимо предоставить результаты международного экзамена TOEFL или IELTS. Если уровень английского языка недостаточно высок, можно пройти подготовительные курсы при университете.</p>
-              <h3 class="programs__subtitle">Специальности (PATHWAY)</h3>
-              <ul class="programs__sublist">
-                <li class="programs__sublist-item">Биологические науки</li>
-                <li class="programs__sublist-item">Инженерные науки</li>
-                <li class="programs__sublist-item">Искусствоведение</li>
-                <li class="programs__sublist-item">Лингвистика</li>
-                <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
-                <li class="programs__sublist-item">Науки о материалах</li>
-              </ul>
-              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
-            </div>
-            <div class="programs__info-item programs__info-item_6">
-              <p class="programs__text">В вузах Кипра представлен широкий выбор специальностей на английском языке: от гуманитарных наук до гостиничного бизнеса. Здесь можно пройти подготовку по программам бакалавриата, магистратуры и докторантуры. На базе многих университетов работают центры трудоустройства и карьеры. Для поступления в университет на Кипре необходимо предоставить результаты международного экзамена TOEFL или IELTS. Если уровень английского языка недостаточно высок, можно пройти подготовительные курсы при университете.</p>
-              <h3 class="programs__subtitle">Специальности (ТЕСТ ШКОЛЫ)</h3>
-              <ul class="programs__sublist">
-                <li class="programs__sublist-item">Биологические науки</li>
-                <li class="programs__sublist-item">Инженерные науки</li>
-                <li class="programs__sublist-item">Искусствоведение</li>
-                <li class="programs__sublist-item">Лингвистика</li>
-                <li class="programs__sublist-item">Менеджмент, бизнес и управление</li>
-                <li class="programs__sublist-item">Науки о материалах</li>
-              </ul>
-              <div class="programs__button"><a href="#">В КАТАЛОГ</a></div>
-            </div>
+          <div class="row title mobile"><a class="content-login-mobile__sign" href="#">Регистрация</a><a class="content-login-mobile__login" href="#">Вход</a></div>
+          <div class="row social"><a class="content-login-social__vk" href="#"></a><a class="content-login-social__fb" href="#"></a></div>
+          <div class="row form-sign">
+            <h2 class="form-sign__title">Регистрация</h2>
+            <div class="form-sign-social"><a class="form-sign-social__vk" href="#"></a><a class="form-sign-social__fb" href="#"></a></div>
+            <form class="content-login-form-sign" action="#" method="get">
+              <label class="content-login-form-sign__label" for="surname">Фамилия *</label>
+              <input class="content-login-form-sign__input" type="text" name="surname" required="required" autocomplete="off" placeholder="Иванов"/>
+              <label class="content-login-form-sign__label" for="name">Имя *</label>
+              <input class="content-login-form-sign__input" type="text" name="name" required="required" autocomplete="off" placeholder="Иван"/>
+              <label class="content-login-form-sign__label" for="phone">Телефон *</label>
+              <input class="content-login-form-sign__input" type="tel" name="phone" placeholder="+7 (123) ___-__-__" required="required" autocomplete="off"/>
+              <label class="content-login-form-sign__label--error" for="phone">Поле заполненно с ошибкой</label>
+              <label class="content-login-form-sign__label" for="mail">Эл. почта *</label>
+              <input class="content-login-form-sign__input" type="text" name="mail" placeholder="user@example.com" required="required" autocomplete="off"/>
+              <label class="content-login-form-sign__label--error" for="mail">Поле заполненно с ошибкой</label>
+              <label class="content-login-form-sign__label" for="pass">Пароль *</label>
+              <input class="content-login-form-sign__input" type="password" name="pass" required="required" autocomplete="off"/>
+              <label class="content-login-form-sign__label--error" for="pass">Поле заполненно с ошибкой</label>
+              <label class="content-login-form-sign__label" for="reqpass">Подтверждение пароля *</label>
+              <input class="content-login-form-sign__input" type="password" name="reqpass" required="required" autocomplete="off"/>
+              <label class="content-login-form-sign__label--error" for="reqpass">Введенные пароли не совпадают</label>
+              <div class="capcha">
+                <script src="https://www.google.com/recaptcha/api.js" async="async" defer="defer"></script>
+                <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+              </div>
+              <input class="content-login-form-sign__button" type="submit" value="Регистрация"/>
+              <div class="content-login-form-sign-reg">
+                <label class="content-login-form-sign-reg_lable">
+                  <input class="content-login-form-sign-reg__check" type="checkbox" name="checkbox" required="required"/><span class="content-login-form-sign-reg__check-cust"></span>
+                </label>
+                <p class="content-login-form-sign-reg__inst">Я подтверждаю, что ознакомлен с  <a href="#">Политикой в области защиты персональных данных ООО  «Экселенте» </a> и даю свое согласие на работу с моими персональными данными.</p>
+              </div>
+            </form>
+          </div>
+          <div class="row form-log">
+            <h2 class="form-log__title">Вход</h2>
+            <div class="form-log-social"><a class="form-log-social__vk" href="#"></a><a class="form-log-social__fb" href="#"></a></div>
+            <form class="content-login-form-log" action="#" method="get">
+              <label class="content-login-form-log__label" for="mail">Эл. почта *</label>
+              <input class="content-login-form-log__input" type="text" name="mail" placeholder="user@example.com" required="required" autocomplete="off"/>
+              <label class="content-login-form-log__label--error" for="mail">Поле заполненно с ошибкой</label>
+              <label class="content-login-form-log__label" for="pass">Пароль *</label>
+              <input class="content-login-form-log__input" type="password" name="pass" required="required" autocomplete="off"/>
+              <label class="content-login-form-log__label--error" for="pass">Поле заполненно с ошибкой</label>
+              <input class="content-login-form-log__button" type="submit" value="Вход"/><a class="content-login-form-log__button-link" href="password-restore-1-step.html">Забыл пароль</a>
+            </form>
           </div>
         </div>
-      </section>
+      </div>
       <footer class="footer">
         <div class="footer__top">
           <div class="footer-logo-button__wrapper"><a href="index.html">
@@ -373,7 +315,6 @@
       <script src="js/select.js"></script>
       <script src="js/favorite.js"></script>
       <script src="js/login.js"></script>
-      <script src="js/school-page.js"></script>
     </div>
   </body>
 </html>
