--- a/exelenteRu/login.html
+++ b/exelenteRu/login.html
@@ -13,10 +13,19 @@
     <link rel="stylesheet" href="css/footer.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script href="js/prefixfree.min.js" type="text/javascript"></script>
+    <script>
+      $(window).resize(function(){
+      window.setTimeout('location.reload()', 500);
+      });
+      
+    </script>
     <link rel="stylesheet" href="css/content_login.css"/>
   </head>
   <body>
     <div class="container">
+      <!--delete-->
+      <!--img(class = 'pp' src="resourses/главная.jpg", alt="")-->
+      <!--delete-->
       <header class="header">
         <div class="header__top-block top-block">
           <div class="wrapper header__wrapper">
