--- a/exelenteRu/index.html
+++ b/exelenteRu/index.html
@@ -13,13 +13,25 @@
     <link rel="stylesheet" href="css/footer.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script href="js/prefixfree.min.js" type="text/javascript"></script>
+    <script>
+      $(window).resize(function(){
+      window.setTimeout('location.reload()', 500);
+      });
+      
+    </script>
     <link rel="stylesheet" href="css/main-page.css"/>
+    <link rel="stylesheet" href="css/select-programm.css"/>
     <link rel="stylesheet" href="css/content_weworking.css"/>
+    <link rel="stylesheet" href="blocks/countries/countries.css"/>
+    <link rel="stylesheet" href="blocks/popular-programs/popular-programs.css"/>
     <link rel="stylesheet" href="blocks/customer-reviews/customer-reviews.css"/>
     <link rel="stylesheet" href="blocks/blog/blog.css"/>
   </head>
   <body>
     <div class="container">
+      <!--delete-->
+      <!--img(class = 'pp' src="resourses/главная.jpg", alt="")-->
+      <!--delete-->
       <header class="header">
         <div class="header__top-block top-block">
           <div class="wrapper header__wrapper">
@@ -333,8 +345,11 @@
       <script src="js/login.js"></script>
       <script src="js/popup-login.js"></script>
       <script src="js/slider.js"></script>
-      <script src="blocks/customer-reviews/customer-reviews.js"></script>
+      <script src="js/select.js"></script>
       <script src="js/content_weworking.js"></script>
+      <script src="blocks/countries/countries.js"></script>
+      <script src="blocks/customer-reviews/customer-reviews.js"></script>
+      <script src="blocks/popular-programs/popular-programs.js"></script>
       <script src="blocks/blog/blog.js"></script>
     </div>
   </body>
