--- a/exelenteRu/password-restore-1-step.html
+++ b/exelenteRu/password-restore-1-step.html
@@ -13,10 +13,19 @@
     <link rel="stylesheet" href="css/footer.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script href="js/prefixfree.min.js" type="text/javascript"></script>
+    <script>
+      $(window).resize(function(){
+      window.setTimeout('location.reload()', 500);
+      });
+      
+    </script>
     <link rel="stylesheet" href="css/password-restore.css"/>
   </head>
   <body>
     <div class="container">
+      <!--delete-->
+      <!--img(class = 'pp' src="resourses/главная.jpg", alt="")-->
+      <!--delete-->
       <header class="header">
         <div class="header__top-block top-block">
           <div class="wrapper header__wrapper">
@@ -204,8 +213,8 @@
           </div>
           <form class="reset__form">
             <p class="e-mail__title">Эл. почта</p>
-            <input class="e-mail__field" type="e-mail" placeholder="user@example.com"/>
-            <button class="button button-action__reset-password" type="reset" value=""> <a href="password-restore-2-step.html">сбросить пароль</a></button>
+            <input class="e-mail__field" type="email" placeholder="user@example.com"/>
+            <button class="button button-action__reset-password" type="submit" value=""> <a href="password-restore-2-step.html">сбросить пароль</a></button>
           </form>
         </div>
       </section>
