--- a/exelenteRu/schools.html
+++ b/exelenteRu/schools.html
@@ -13,10 +13,19 @@
     <link rel="stylesheet" href="css/footer.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script href="js/prefixfree.min.js" type="text/javascript"></script>
+    <script>
+      $(window).resize(function(){
+      window.setTimeout('location.reload()', 500);
+      });
+      
+    </script>
     <link rel="stylesheet" href="css/content_schools.css"/>
   </head>
   <body>
     <div class="container">
+      <!--delete-->
+      <!--img(class = 'pp' src="resourses/главная.jpg", alt="")-->
+      <!--delete-->
       <header class="header">
         <div class="header__top-block top-block">
           <div class="wrapper header__wrapper">
@@ -513,7 +522,7 @@
               <div class="school-card school-1">
                 <div class="school-card__image">
                   <div class="school__info">
-                    <h2 class="school-card__name">St. John's University</h2><span class="school-card__country">США</span>
+                    <h3 class="school-card__name">St. John's University</h3><span class="school-card__country">США</span>
                     <button class="button__action more" type="button" value=""><a href="school-page.html">подробнее</a></button>
                   </div>
                 </div>
@@ -521,7 +530,7 @@
               <div class="school-card school-1">
                 <div class="school-card__image">
                   <div class="school__info">
-                    <h2 class="school-card__name">St. John's University</h2><span class="school-card__country">США</span>
+                    <h3 class="school-card__name">St. John's University</h3><span class="school-card__country">США</span>
                     <button class="button__action more" type="button" value=""><a href="#">подробнее</a></button>
                   </div>
                 </div>
@@ -529,7 +538,7 @@
               <div class="school-card school-1">
                 <div class="school-card__image">
                   <div class="school__info">
-                    <h2 class="school-card__name">St. John's University</h2><span class="school-card__country">США</span>
+                    <h3 class="school-card__name">St. John's University</h3><span class="school-card__country">США</span>
                     <button class="button__action more" type="button" value=""><a href="#">подробнее</a></button>
                   </div>
                 </div>
@@ -537,7 +546,7 @@
               <div class="school-card school-1">
                 <div class="school-card__image">
                   <div class="school__info">
-                    <h2 class="school-card__name">St. John's University</h2><span class="school-card__country">США</span>
+                    <h3 class="school-card__name">St. John's University</h3><span class="school-card__country">США</span>
                     <button class="button__action more" type="button" value=""><a href="#">подробнее</a></button>
                   </div>
                 </div>
@@ -545,7 +554,7 @@
               <div class="school-card school-1">
                 <div class="school-card__image">
                   <div class="school__info">
-                    <h2 class="school-card__name">St. John's University</h2><span class="school-card__country">США</span>
+                    <h3 class="school-card__name">St. John's University</h3><span class="school-card__country">США</span>
                     <button class="button__action more" type="button" value=""><a href="#">подробнее</a></button>
                   </div>
                 </div>
@@ -553,7 +562,7 @@
               <div class="school-card school-1">
                 <div class="school-card__image">
                   <div class="school__info">
-                    <h2 class="school-card__name">St. John's University</h2><span class="school-card__country">США</span>
+                    <h3 class="school-card__name">St. John's University</h3><span class="school-card__country">США</span>
                     <button class="button__action more" type="button" value=""><a href="#">подробнее</a></button>
                   </div>
                 </div>
@@ -561,7 +570,7 @@
               <div class="school-card school-1">
                 <div class="school-card__image">
                   <div class="school__info">
-                    <h2 class="school-card__name">St. John's University</h2><span class="school-card__country">США</span>
+                    <h3 class="school-card__name">St. John's University</h3><span class="school-card__country">США</span>
                     <button class="button__action more" type="button" value=""><a href="#">подробнее</a></button>
                   </div>
                 </div>
@@ -569,7 +578,7 @@
               <div class="school-card school-1">
                 <div class="school-card__image">
                   <div class="school__info">
-                    <h2 class="school-card__name">St. John's University</h2><span class="school-card__country">США</span>
+                    <h3 class="school-card__name">St. John's University</h3><span class="school-card__country">США</span>
                     <button class="button__action more" type="button" value=""><a href="#">подробнее</a></button>
                   </div>
                 </div>
@@ -577,7 +586,7 @@
               <div class="school-card school-1">
                 <div class="school-card__image">
                   <div class="school__info">
-                    <h2 class="school-card__name">St. John's University</h2><span class="school-card__country">США</span>
+                    <h3 class="school-card__name">St. John's University</h3><span class="school-card__country">США</span>
                     <button class="button__action more" type="button" value=""><a href="#">подробнее</a></button>
                   </div>
                 </div>
