--- a/exelenteRu/password-restore-1-step.html
+++ b/exelenteRu/password-restore-1-step.html
@@ -14,9 +14,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script href="js/prefixfree.min.js" type="text/javascript"></script>
     <script>
-//       $(window).resize(function(){
-//       window.setTimeout('location.reload()', 500);
-//       });
+      $(window).resize(function(){
+      window.setTimeout('location.reload()', 500);
+      });
       
     </script>
     <link rel="stylesheet" href="css/password-restore.css"/>
@@ -211,10 +211,11 @@
             <p class="step-description">Введите электронную почту, указанную при регистрации, на нее мы вышлем ссылку для восстановления пароля</p>
             <p class="confidence-policy">Ваши данные под надежной защитой в соответствии с <a class="confidence-policy__link" href="#">политикой конфиденциальности</a></p>
           </div>
-          <form class="reset__form">
+          <form class="reset__form" action="password-restore-2-step.html" method="post">
             <p class="e-mail__title">Эл. почта</p>
-            <input class="e-mail__field" type="email" placeholder="user@example.com"/>
-            <button class="button button-action__reset-password" type="submit" value=""> <a href="password-restore-2-step.html">сбросить пароль</a></button>
+            <input class="e-mail__field" type="email" name="mail" placeholder="user@example.com"/>
+            <label class="e-mail__error" for="mail">Поле заполнено с ошибкой</label>
+            <input class="button button-action__reset-password" type="submit" value="сбросить пароль"/>
           </form>
         </div>
       </section>
