--- a/exelenteRu/index.html
+++ b/exelenteRu/index.html
@@ -14,9 +14,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script href="js/prefixfree.min.js" type="text/javascript"></script>
     <script>
-      //$(window).resize(function(){
-     // window.setTimeout('location.reload()', 500);
-      //});
+      $(window).resize(function(){
+      window.setTimeout('location.reload()', 500);
+      });
       
     </script>
     <link rel="stylesheet" href="css/main-page.css"/>
