--- a/exelenteRu/password-restore-1-step.html
+++ b/exelenteRu/password-restore-1-step.html
@@ -205,7 +205,7 @@
             <p class="step-description">Введите электронную почту, указанную при регистрации, на нее мы вышлем ссылку для восстановления пароля</p>
             <p class="confidence-policy">Ваши данные под надежной защитой в соответствии с <a class="confidence-policy__link" href="#">политикой конфиденциальности</a></p>
           </div>
-          <form class="reset__form" action="password-restore-2-step.html" method="post">
+          <form class="reset__form" action="password-restore-2-step.html" method="get">
             <p class="e-mail__title">Эл. почта</p>
             <input class="e-mail__field" type="email" name="mail" placeholder="user@example.com"/>
             <label class="e-mail__error" for="mail">Поле заполнено с ошибкой</label>
