--- a/exelenteRu/index.html
+++ b/exelenteRu/index.html
@@ -271,9 +271,10 @@
       <section class="content-wework">
         <section class="content-weworking">
           <h2 class="content-weworking__title">Как мы работаем</h2>
-          <article class="content-weworking-item content-weworking-item-1">
+          <article class="content-weworking-item content-weworking-item-1 content-weworking-item--active">
             <article class="content-weworking-item-text content-weworking-item-1-text">
-              <ul class="content-weworking-item-text-ulist content-weworking-item-1-text-ulist"><img class="content-weworking-item-text-ulist-img content-weworking-item-text-ulist-img1" src="img/svg-content/conversation.svg" alt="#"/>
+              <ul class="content-weworking-item-text-ulist content-weworking-item-1-text-ulist">
+                <div class="content-weworking-item-text-ulist-img content-weworking-item-text-ulist-img1"></div>
                 <li class="content-weworking-item-text-ulist__list content-weworking-item-1-text-ulist__list">Консультирование</li>
                 <button class="content-weworking-item-text-ulist__list--open content-weworking-item-1-text-ulist__list--open"></button>
               </ul>
@@ -283,7 +284,8 @@
           </article>
           <article class="content-weworking-item content-weworking-item-2">
             <article class="content-weworking-item-text content-weworking-item-2-text">
-              <ul class="content-weworking-item-text-ulist content-weworking-item-2-text-ulist"><img class="content-weworking-item-text-ulist-img content-weworking-item-text-ulist-img1" src="img/svg-content/wallet.svg" alt="#"/>
+              <ul class="content-weworking-item-text-ulist content-weworking-item-2-text-ulist">
+                <div class="content-weworking-item-text-ulist-img content-weworking-item-text-ulist-img1"></div>
                 <li class="content-weworking-item-text-ulist__list content-weworking-item-2-text-ulist__list">Оплата орг. сбора</li>
                 <button class="content-weworking-item-text-ulist__list--open content-weworking-item-2-text-ulist__list--open"></button>
               </ul>
@@ -293,8 +295,9 @@
           </article>
           <article class="content-weworking-item content-weworking-item-3">
             <article class="content-weworking-item-text content-weworking-item-3-text">
-              <ul class="content-weworking-item-text-ulist content-weworking-item-3-text-ulist"><img class="content-weworking-item-text-ulist-img content-weworking-item-text-ulist-img1" src="img/svg-content/search.svg" alt="#"/>
-                <li class="content-weworking-item-text-ulist__list content-weworking-item-3-text-ulist__list">Оплата орг. сбора</li>
+              <ul class="content-weworking-item-text-ulist content-weworking-item-3-text-ulist">
+                <div class="content-weworking-item-text-ulist-img content-weworking-item-text-ulist-img1"></div>
+                <li class="content-weworking-item-text-ulist__list content-weworking-item-3-text-ulist__list">Подбор программы</li>
                 <button class="content-weworking-item-text-ulist__list--open content-weworking-item-3-text-ulist__list--open"></button>
               </ul>
               <p class="content-weworking-item-text-ulist__list-desc content-weworking-item-3-text-ulist__list-desc">Залог успешного получения образования за рубежом — верный выбор страны, учебного заведения и программы.</p>
@@ -303,7 +306,8 @@
           </article>
           <article class="content-weworking-item content-weworking-item-4">
             <article class="content-weworking-item-text content-weworking-item-4-text">
-              <ul class="content-weworking-item-text-ulist content-weworking-item-4-text-ulist"><img class="content-weworking-item-text-ulist-img content-weworking-item-text-ulist-img1" src="img/svg-content/docs.svg" alt="#"/>
+              <ul class="content-weworking-item-text-ulist content-weworking-item-4-text-ulist">
+                <div class="content-weworking-item-text-ulist-img content-weworking-item-text-ulist-img1"></div>
                 <li class="content-weworking-item-text-ulist__list content-weworking-item-4-text-ulist__list">Оформление документов</li>
                 <button class="content-weworking-item-text-ulist__list--open content-weworking-item-4-text-ulist__list--open"></button>
               </ul>
@@ -313,7 +317,8 @@
           </article>
           <article class="content-weworking-item content-weworking-item-5">
             <article class="content-weworking-item-text content-weworking-item-5-text">
-              <ul class="content-weworking-item-text-ulist content-weworking-item-5-text-ulist"><img class="content-weworking-item-text-ulist-img content-weworking-item-text-ulist-img1" src="img/svg-content/kurator.svg" alt="#"/>
+              <ul class="content-weworking-item-text-ulist content-weworking-item-5-text-ulist">
+                <div class="content-weworking-item-text-ulist-img content-weworking-item-text-ulist-img1"></div>
                 <li class="content-weworking-item-text-ulist__list content-weworking-item-5-text-ulist__list">Курирование</li>
                 <button class="content-weworking-item-text-ulist__list--open content-weworking-item-5-text-ulist__list--open"></button>
               </ul>
@@ -544,6 +549,10 @@
                 <div class="blog__button"><a href="#">подробнее</a></div>
               </li>
             </ul>
+            <div class="blog__navigation navigation">
+              <div class="navigation__arrow navigation__arrow_left"> </div>
+              <div class="navigation__arrow navigation__arrow_right"></div>
+            </div>
           </div>
         </div>
       </section>
@@ -650,7 +659,6 @@
       <script src="js/header.js"></script>
       <script src="js/select.js"></script>
       <script src="js/favorite.js"></script>
-      <script src="js/login.js"></script>
       <script src="js/popup-login.js"></script>
       <script src="js/slider.js"></script>
       <script src="js/select.js"></script>
