--- a/exelenteRu/login.html
+++ b/exelenteRu/login.html
@@ -188,13 +188,16 @@
             </div>
           </div>
         </div>
+        <div class="site-path"> 
+          <ul class="site-path__items">
+            <li class="site-path__item"><a href="index.html">Главная</a></li>
+            <li class="site-path__item"><a href="schools.html">Страница 1</a></li>
+            <li class="site-path__item"><a href="schools.html">Страница 2</a></li>
+          </ul>
+        </div>
       </header>
       <div class="wrapper">
         <div class="content-login">
-          <ul class="content-login-items">
-            <li class="content-login-items__item"><a class="content-login-items__item-link" href="index.html">главная</a></li>
-            <li class="content-login-items__item"><a class="content-login-items__item-link" href="#">вход/регистрация</a></li>
-          </ul>
           <div class="row title mobile"><a class="content-login-mobile__sign" href="#">Регистрация</a><a class="content-login-mobile__login" href="#">Вход</a></div>
           <div class="row social"><a class="content-login-social__vk" href="#"></a><a class="content-login-social__fb" href="#"></a></div>
           <div class="row form-sign">
@@ -271,9 +274,7 @@
       <footer class="footer">
         <div class="footer__top">
           <div class="footer-logo-button__wrapper"><a href="index.html">
-              <div class="footer-logo"></div></a>
-            <button class="button__action franchise" type="button" value=""><a href="#">приобрести франшизу</a></button>
-          </div>
+              <div class="footer-logo"></div></a><a class="button__action franchise" href="#">приобрести франшизу </a></div>
           <nav class="footer-menu__items">
             <div class="items_block-1">
               <div class="footer-menu__item"> <a href="#">о компании</a></div>
@@ -286,8 +287,8 @@
               <div class="footer-menu__item"><a href="#">контакты</a></div>
             </div>
           </nav>
-          <div class="footer__contacts"><a class="footer__phone" href="tel:8-800-737-77-05">8 800 737-77-05</a>
-            <button class="button__action free-line" type="button" value=""><a href="#">бесплатная линия</a></button>
+          <div class="footer__contacts">
+            <p class="footer__phone">8 800 737-77-05</p><a class="free-line" href="tel:8-800-737-77-05">бесплатная линия</a>
             <div class="footer__social-links"><a href="#">
                 <div class="footer__social-link footer__social-link_instagram"></div></a><a href="#">
                 <div class="footer__social-link footer__social-link_fb"></div></a><a href="#">
@@ -301,9 +302,8 @@
               <p class="copyright"><span class="comp-name">OOO «Экселенте», 2018 г.</span></p><br/>
               <p class="license">Лицензия ФМС МВД РФ № 20110251124 от 13.08.2010 г. бессрочно</p>
             </div>
-            <div class="footer__made-by">
-              <p>Разработка сайта<a class="developer" href="#">DVIGA</a></p>
-            </div>
+            <div class="footer__made-by"><a class="developer" href="#">
+                <p>Разработка сайта <span>DVIGA</span></p></a></div>
           </div>
         </div>
       </footer>
