--- a/exelenteRu/index.html
+++ b/exelenteRu/index.html
@@ -194,6 +194,13 @@
             </div>
           </div>
         </div>
+        <div class="site-path"> 
+          <ul class="site-path__items">
+            <li class="site-path__item"><a href="index.html">Главная</a></li>
+            <li class="site-path__item"><a href="schools.html">Страница 1</a></li>
+            <li class="site-path__item"><a href="schools.html">Страница 2</a></li>
+          </ul>
+        </div>
       </header>
       <section class="slider slider__main">
         <div class="slider__items">
@@ -204,19 +211,19 @@
           </div>
           <div class="slider__item slider__item_2 slide">
             <div class="wrapper slide__wrapper">
-              <h2 class="slide__title">St. John's University</h2>
+              <h2 class="slide__title slide__title_blue">St. John's University</h2>
               <p class="slide__description">набор на новый учебный год</p><a class="slide__button" href="school-page.html">подробнее</a>
             </div>
           </div>
           <div class="slider__item slider__item_3 slide">
             <div class="wrapper slide__wrapper">
-              <h2 class="slide__title">Мексика</h2>
+              <h2 class="slide__title slide__title_blue">Мексика</h2>
               <p class="slide__description">страна с упрощенным визовым режимом</p><a class="slide__button" href="#">подробнее</a>
             </div>
           </div>
           <div class="slider__item slider__item_4 slide">
             <div class="wrapper slide__wrapper">
-              <h2 class="slide__title">Получи дополнительные <br/>бонусные баллы</h2>
+              <h2 class="slide__title slide__title_blue">Получи дополнительные <br/>бонусные баллы</h2>
               <p class="slide__description">Оплати услугу «Визовое сопровождение» онлайн</p><a class="slide__button" href="#">подробнее</a>
             </div>
           </div>
@@ -559,9 +566,7 @@
       <footer class="footer">
         <div class="footer__top">
           <div class="footer-logo-button__wrapper"><a href="index.html">
-              <div class="footer-logo"></div></a>
-            <button class="button__action franchise" type="button" value=""><a href="#">приобрести франшизу</a></button>
-          </div>
+              <div class="footer-logo"></div></a><a class="button__action franchise" href="#">приобрести франшизу </a></div>
           <nav class="footer-menu__items">
             <div class="items_block-1">
               <div class="footer-menu__item"> <a href="#">о компании</a></div>
@@ -574,8 +579,8 @@
               <div class="footer-menu__item"><a href="#">контакты</a></div>
             </div>
           </nav>
-          <div class="footer__contacts"><a class="footer__phone" href="tel:8-800-737-77-05">8 800 737-77-05</a>
-            <button class="button__action free-line" type="button" value=""><a href="#">бесплатная линия</a></button>
+          <div class="footer__contacts">
+            <p class="footer__phone">8 800 737-77-05</p><a class="free-line" href="tel:8-800-737-77-05">бесплатная линия</a>
             <div class="footer__social-links"><a href="#">
                 <div class="footer__social-link footer__social-link_instagram"></div></a><a href="#">
                 <div class="footer__social-link footer__social-link_fb"></div></a><a href="#">
@@ -589,9 +594,8 @@
               <p class="copyright"><span class="comp-name">OOO «Экселенте», 2018 г.</span></p><br/>
               <p class="license">Лицензия ФМС МВД РФ № 20110251124 от 13.08.2010 г. бессрочно</p>
             </div>
-            <div class="footer__made-by">
-              <p>Разработка сайта<a class="developer" href="#">DVIGA</a></p>
-            </div>
+            <div class="footer__made-by"><a class="developer" href="#">
+                <p>Разработка сайта <span>DVIGA</span></p></a></div>
           </div>
         </div>
       </footer>
