--- a/exelenteRu/school-page.html
+++ b/exelenteRu/school-page.html
@@ -188,16 +188,16 @@
             </div>
           </div>
         </div>
+        <div class="site-path"> 
+          <ul class="site-path__items">
+            <li class="site-path__item"><a href="index.html">Главная</a></li>
+            <li class="site-path__item"><a href="schools.html">Страница 1</a></li>
+            <li class="site-path__item"><a href="schools.html">Страница 2</a></li>
+          </ul>
+        </div>
       </header>
       <section class="images">
         <div class="wrapper images__wrapper">
-          <div class="images__site-path site-path"> 
-            <ul class="site-path__items">
-              <li class="site-path__item"><a href="index.html">Главная</a></li>
-              <li class="site-path__item"><a href="schools.html">Школы</a></li>
-              <li class="site-path__item"><a href="school-page.html">St. John's University</a></li>
-            </ul>
-          </div>
           <h2 class="images__title slide__title">St. John's University</h2>
         </div>
       </section>
@@ -306,9 +306,7 @@
       <footer class="footer">
         <div class="footer__top">
           <div class="footer-logo-button__wrapper"><a href="index.html">
-              <div class="footer-logo"></div></a>
-            <button class="button__action franchise" type="button" value=""><a href="#">приобрести франшизу</a></button>
-          </div>
+              <div class="footer-logo"></div></a><a class="button__action franchise" href="#">приобрести франшизу </a></div>
           <nav class="footer-menu__items">
             <div class="items_block-1">
               <div class="footer-menu__item"> <a href="#">о компании</a></div>
@@ -321,8 +319,8 @@
               <div class="footer-menu__item"><a href="#">контакты</a></div>
             </div>
           </nav>
-          <div class="footer__contacts"><a class="footer__phone" href="tel:8-800-737-77-05">8 800 737-77-05</a>
-            <button class="button__action free-line" type="button" value=""><a href="#">бесплатная линия</a></button>
+          <div class="footer__contacts">
+            <p class="footer__phone">8 800 737-77-05</p><a class="free-line" href="tel:8-800-737-77-05">бесплатная линия</a>
             <div class="footer__social-links"><a href="#">
                 <div class="footer__social-link footer__social-link_instagram"></div></a><a href="#">
                 <div class="footer__social-link footer__social-link_fb"></div></a><a href="#">
@@ -336,9 +334,8 @@
               <p class="copyright"><span class="comp-name">OOO «Экселенте», 2018 г.</span></p><br/>
               <p class="license">Лицензия ФМС МВД РФ № 20110251124 от 13.08.2010 г. бессрочно</p>
             </div>
-            <div class="footer__made-by">
-              <p>Разработка сайта<a class="developer" href="#">DVIGA</a></p>
-            </div>
+            <div class="footer__made-by"><a class="developer" href="#">
+                <p>Разработка сайта <span>DVIGA</span></p></a></div>
           </div>
         </div>
       </footer>
