--- a/exelenteRu/schools.html
+++ b/exelenteRu/schools.html
@@ -188,16 +188,15 @@
             </div>
           </div>
         </div>
+        <div class="site-path"> 
+          <ul class="site-path__items">
+            <li class="site-path__item"><a href="index.html">Главная</a></li>
+            <li class="site-path__item"><a href="schools.html">Страница 1</a></li>
+            <li class="site-path__item"><a href="schools.html">Страница 2</a></li>
+          </ul>
+        </div>
       </header>
       <section class="slider slider__schools">
-        <div class="wrapper slider__wrapper">
-          <div class="slider__site-path site-path"> 
-            <ul class="site-path__items">
-              <li class="site-path__item"><a href="index.html">Главная</a></li>
-              <li class="site-path__item"><a href="schools.html">Школы</a></li>
-            </ul>
-          </div>
-        </div>
         <div class="slider__items">
           <div class="slider__item slider__item_1 slide">
             <div class="wrapper slide__wrapper">
@@ -248,10 +247,10 @@
           <div class="content__main">
             <aside class="sidebar">
               <section class="sidebar__part">
-                <h3 class="sidebar__part-button-prog">Программа
+                <h3 class="sidebar__part-button sidebar__part-button-prog">Программа
                   <div class="sidebar-arrow arrow-prog"></div>
                 </h3>
-                <ul class="choose-program__checkboxes">
+                <ul class="choose-program__checkboxes hidden">
                   <li>
                     <label>
                       <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Каникулярные программы</span>
@@ -307,13 +306,13 @@
                       <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Foundation</span>
                     </label>
                   </li>
-                </ul>
+                </ul><a class="show-all hidden" href="#">показать все			</a>
               </section>
               <section class="sidebar__part">
-                <h3 class="sidebar__part-button-spec">Специальности
+                <h3 class="sidebar__part-button sidebar__part-button-spec">Специальности
                   <div class="sidebar-arrow arrow-spec"></div>
                 </h3>
-                <ul class="choose-specialty__checkboxes">
+                <ul class="choose-specialty__checkboxes hidden">
                   <li>
                     <label>
                       <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Менеджмент, бизнес и управление</span>
@@ -369,10 +368,10 @@
                       <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Режиссура и кинематография</span>
                     </label>
                   </li>
-                </ul>
+                </ul><a class="show-all hidden" href="#"> показать все</a>
               </section>
               <section class="sidebar__part">
-                <h3 class="sidebar__part-button-count">Страны
+                <h3 class="sidebar__part-button sidebar__part-button-count">Страны
                   <div class="sidebar-arrow arrow-count" style="transform: rotate(180deg);"></div>
                 </h3>
                 <ul class="choose-country__checkboxes">
@@ -595,9 +594,7 @@
       <footer class="footer">
         <div class="footer__top">
           <div class="footer-logo-button__wrapper"><a href="index.html">
-              <div class="footer-logo"></div></a>
-            <button class="button__action franchise" type="button" value=""><a href="#">приобрести франшизу</a></button>
-          </div>
+              <div class="footer-logo"></div></a><a class="button__action franchise" href="#">приобрести франшизу </a></div>
           <nav class="footer-menu__items">
             <div class="items_block-1">
               <div class="footer-menu__item"> <a href="#">о компании</a></div>
@@ -610,8 +607,8 @@
               <div class="footer-menu__item"><a href="#">контакты</a></div>
             </div>
           </nav>
-          <div class="footer__contacts"><a class="footer__phone" href="tel:8-800-737-77-05">8 800 737-77-05</a>
-            <button class="button__action free-line" type="button" value=""><a href="#">бесплатная линия</a></button>
+          <div class="footer__contacts">
+            <p class="footer__phone">8 800 737-77-05</p><a class="free-line" href="tel:8-800-737-77-05">бесплатная линия</a>
             <div class="footer__social-links"><a href="#">
                 <div class="footer__social-link footer__social-link_instagram"></div></a><a href="#">
                 <div class="footer__social-link footer__social-link_fb"></div></a><a href="#">
@@ -625,9 +622,8 @@
               <p class="copyright"><span class="comp-name">OOO «Экселенте», 2018 г.</span></p><br/>
               <p class="license">Лицензия ФМС МВД РФ № 20110251124 от 13.08.2010 г. бессрочно</p>
             </div>
-            <div class="footer__made-by">
-              <p>Разработка сайта<a class="developer" href="#">DVIGA</a></p>
-            </div>
+            <div class="footer__made-by"><a class="developer" href="#">
+                <p>Разработка сайта <span>DVIGA</span></p></a></div>
           </div>
         </div>
       </footer>
