Перенес последние изменения

--- a/netology/js-diploma/index.html
+++ b/netology/js-diploma/index.html
@@ -73,8 +73,9 @@
         <p class="image-loader__message">Загружаю изображение...</p>
       </div>      
       
-      <form class="comments__form">
-        <span class="comments__marker"></span><input type="checkbox" class="comments__marker-checkbox">
+      <!-- <form class="comments__form">
+        <span class="comments__marker"></span>
+        <input type="checkbox" class="comments__marker-checkbox">
         <div class="comments__body">
           <div class="comment">
             <p class="comment__time">28.02.18 19:09:33</p>
@@ -101,7 +102,7 @@
           <input class="comments__close" type="button" value="Закрыть">
           <input class="comments__submit" type="submit" value="Отправить">
         </div>
-      </form>
+      </form> -->
 
     </div>
   </body>
